# claude-chat-app

./: .dockerignore  .gitignore  DOCKERFILE  README.md  app.py  docker-compose.yml  pyproject.toml  ruff.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_app.py  test_conversation_manager.py  test_file_processor.py  test_web_searcher.py
