[project]
name = "claude-chat-app"
version = "0.1.0"
description = ""
authors = [
    {name = "FrostWillmott",email = "i.tkachenko@zohomail.eu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "anthropic (>=0.54.0,<0.55.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "markdown (>=3.8,<4.0)",
    "pandas-stubs (>=2.2.3.250527,<3.0.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "eventlet (>=0.40.0,<0.41.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
pre-commit = "^4.2.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

